--- a/DeviceSettings/res/xml/advanced_preferences.xml
+++ b/DeviceSettings/res/xml/advanced_preferences.xml
@@ -1,32 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:teamcanjica="http://schemas.android.com/apk/res/com.teamcanjica.settings.device" >
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <PreferenceCategory android:title="@string/storage_subcat_title" >
         <CheckBoxPreference
             android:key="switch_storage"
             android:summary="@string/switch_storage_summary_head"
             android:title="@string/switch_storage_title_head" />
-    </PreferenceCategory>
-    
-   <PreferenceCategory android:title="@string/scheduler_subcat_title" >
-       <com.teamcanjica.settings.device.ReadaheadkB
-           android:defaultValue="512"
-           android:dialogMessage="@string/readaheadkb_dialog_message"
-           teamcanjica:maximumValue="4096"
-           teamcanjica:minimumValue="128"
-           teamcanjica:units="kB"
-           teamcanjica:stepSize="128"
-           android:key="readaheadkb"
-           android:title="@string/readaheadkb_title_head"
-           android:summary="@string/readaheadkb_summary_head" />
-   </PreferenceCategory>
-
-    <PreferenceCategory android:title="@string/mmc_subcat_title" >
-        <CheckBoxPreference
-            android:key="use_spi_crc"
-            android:summary="@string/use_spi_crc_summary_head"
-            android:title="@string/use_spi_crc_title_head" />
     </PreferenceCategory>
 
     <PreferenceCategory android:title="@string/accelerometer_subcat_title" >
